0.16/README.md
# Curation List for Moss 0.16

This folder contains a curations list and a Tools list.

**Curation List**:
A curation list is a list of curations of Weave Tools maintained by a curator. It can contain
multiple curations listing Tools of different developer collectives.

**Tools List**:
A Tools list is a list of Weave Tools maintained by a developer collective. It contains information
about the developer collective as well as a list of Tools and available versions thereof. A Tool
is identified by an `id` and a `versionBranch`, where all versions of a Tool belonging to the same
`versionBranch` are assumed to be compatible.

## Computing Sha256 Hashes of .webhapp files

To verify the integrity of the files, the sha256 hashes of the `.webhapp`, `.happ` and the UI are
required for every Tool version in a Tools list. These get stored in the group DNA of a Moss
group so that each group member can verify that they download the same Tool as other group
members.

To compute these hashes you can use the Weave CLI [`@theweave/cli`](https://www.npmjs.com/package/@theweave/cli) and
run the following command:
```
weave hash-webhapp [version] [path or URL to your Tool's webhapp file]
```

> [!IMPORTANT]
> It is important to use the Weave CLI for computing the hashes as the hashes may differ from computing them manually
and they need to match with how Moss computes them.

## Modifying the Curation List

0. Run `npm install`
1. Go to `./modify/curations-0.16.ts` and change the file as needed
2. Run `npm run write-lists` which should update `./lists/curations-0.16.json`.
3. run `npm run test` to run basic validity checks for the generated json file.
4. Make a PR with the new change

## Modifying the Tools List

0. Run `npm install`
1. Go to `./modify/tool-list-0.16.ts` and change the file as needed
2. Run `npm run write-lists` which should update `./lists/tool-list-0.16.json`.
3. run `npm run test` to run basic validity checks for the generated json file.
4. Make a PR with the new change

## Writing a Tool's description and changelogs

Moss renders a Tool's `description` and its versions' `changelog` fields as markdown, side by
side in the same details card: the description fills the **Overview** tab, the changelogs fill the
**Versions** tab. The two tabs share one typographic treatment, so the prose has to share one
shape or the card reads as two different documents. `npm run test` enforces the rules below.

**Description** — level-2 headings only, opening with `## Overview` and including `## Features`:

```
## Overview

One or two paragraphs saying what the Tool is and who it is for.

## Features

- One line per capability
- Written as a capability, not as a release note

## Status

Optional. Use it to say a Tool is experimental, or that its DNA may still change.
```

Further `## ` sections may follow `## Overview` and `## Features`. Deeper headings (`###`) are
rejected: the description is a short card, not a manual.

**Changelog** — prose and, where a release really has several independent parts, bullet lists.
No headings: in the Versions tab the version number is already the heading a changelog sits
under, so a `## Features` inside one competes with it. Say what changed and what it means for
someone upgrading, for example:

```
First release of the Holochain 0.7 line, for Moss 0.16. New network: 0.5.x agents cannot see
boards from any 0.4.x version, so groups should upgrade together. Use the About dialog's Export
All Boards / Import Boards to carry boards across.
```

## Dev Curation List

Alongside the stable lists, this folder also contains a separate **dev** curation list and dev
Tools list for publishing in-development builds:

- Source: `./modify/curations-dev-0.16.ts` and `./modify/tool-list-dev-0.16.ts`
- Generated: `./lists/curations-dev-0.16.json` and `./lists/tool-list-dev-0.16.json`
- Deployed:
  - `https://lightningrodlabs.org/weave-tool-curation/0.16/curations-dev-0.16.json`
  - `https://lightningrodlabs.org/weave-tool-curation/0.16/tool-list-dev-0.16.json`

The dev list is a **separate curation source**: it is not part of the default Lightningrod Labs
curation. To see the dev Tools in Moss, add the dev curations URL above as an additional curation
list in Moss. Users who do not add it never see the dev Tools.

To modify the dev lists, edit the `*-dev-0.16.ts` files and run `npm run write-lists` (which
regenerates and validates both the stable and dev lists), then make a PR.

> [!WARNING]
> Dev versions are unstable and may break or change without notice. Publish multiple
> in-development builds under distinct semver versions (e.g. `0.5.0-dev.0`, `0.5.0-dev.1`). The dev
> list intentionally relaxes the "same `happSha256` across a versionBranch" check that the stable
> list enforces, since the happ legitimately changes between dev builds.

